# knowledge-graph

./: README.md  create_sample.py  main.py  pyproject.toml
api/: routes.py
core/: graph_builder.py  scanner.py  watcher.py
frontend/: graph.js  index.html  panel.js  style.css
sample_data/: 團隊成員.xlsx  客戶需求.xlsx  專案計畫書.xlsx  技術規格.xlsx  測試計畫.xlsx  資料庫設計.xlsx
