[project]
name = "knowledge-graph"
version = "0.1.0"
description = "Excel Interactive Knowledge Graph"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "openpyxl>=3.1",
    "networkx>=3.3",
    "watchdog>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
